--- a/website dev.html
+++ b/website dev.html
@@ -230,7 +230,7 @@
       <div class="row justify-content-center">
           <div class="col-lg-12 col-md-10 col-12">
               <div class="tm-section-title text-center">
-                  <h2>Website Development</h2>
+                  <h2>Website Development!</h2>
                   <hr class="striped-border"/>
                   <h3>Let Us Help</h3>
   <p>Over a decade of experience has provided XOMOX with expertise in developing business applications from scratch, aimed to help improve workflow of client companies. The XOMOX team carefully examines requirements, designs and implements solutions tailored to the client’s individual needs. These take the form of advanced apps that ensure the client’s business processes perform optimally. XOMOX’s DEVELOPS THE FOLLOWING TYPES OF APPLICATIONS
