Linked with all pages

--- a/website dev.html
+++ b/website dev.html
@@ -244,36 +244,45 @@
     Project management<br>
     Sales /orders/ inventory management<br>
     Many others, dependent on individual needs<br>
-    Xomox development process is always focused on application flexibility and scalability. The design of the database structure receives special attention as further development may be required as applications grow and new features are constantly added. Standard and current technology and database solutions are deployed, ensuring flawless performance and maintenance of flexibility for future updates</p>
+    Winsome development process is always focused on application flexibility and scalability. The design of the database structure receives special attention as further development may be required as applications grow and new features are constantly added. Standard and current technology and database solutions are deployed, ensuring flawless performance and maintenance of flexibility for future updates</p>
   
-  <h3>ANDROID</h3>
-  <p>Android is one of the fastest growing mobile operating systems with 60-80% user adoption rates across the globe. Android is backed by Google, and is constantly updating & innovating the mobile OS to increase user engagement and smoothen mobile operations. Android also runs across tablets, smart watches, TV, Automobiles & Augmented Reality. Google Play is Android’s App market which generated about six billion U.S. dollars in revenue last year, and is increasing day by day.</p>
+  <h3>PHP DEVELOPMENT</h3>
+  <p>Laravel<br>
+    CodeIgniter<br>
+    Symfony<br>
+    Yii<br>
+    CakePHP<br>
+    Zend2</p>
   
-  <h3>ANDROID</h3>
-  <p>Android is one of the fastest growing mobile operating systems with 60-80% user adoption rates across the globe. Android is backed by Google, and is constantly updating & innovating the mobile OS to increase user engagement and smoothen mobile operations. Android also runs across tablets, smart watches, TV, Automobiles & Augmented Reality. Google Play is Android’s App market which generated about six billion U.S. dollars in revenue last year, and is increasing day by day.</p>
+  <h3>NODE JS DEVELOPMENT</h3>
+  <p>Express.js<br>
+    Koa.js<br>
+    Meteor.js<br>
+    Socket.io<br>
+    Mean.js<br>
+    Sails.js</p>
   
-  <h3>ANDROID</h3>
-  <p>Android is one of the fastest growing mobile operating systems with 60-80% user adoption rates across the globe. Android is backed by Google, and is constantly updating & innovating the mobile OS to increase user engagement and smoothen mobile operations. Android also runs across tablets, smart watches, TV, Automobiles & Augmented Reality. Google Play is Android’s App market which generated about six billion U.S. dollars in revenue last year, and is increasing day by day.</p>
+  <h3>.NET DEVELOPMENT</h3>
+  <p>ASP.NET<br>
+    Windows Azure<br>
+    Silverlight</p>
   
-  <h3>ANDROID</h3>
-  <p>Android is one of the fastest growing mobile operating systems with 60-80% user adoption rates across the globe. Android is backed by Google, and is constantly updating & innovating the mobile OS to increase user engagement and smoothen mobile operations. Android also runs across tablets, smart watches, TV, Automobiles & Augmented Reality. Google Play is Android’s App market which generated about six billion U.S. dollars in revenue last year, and is increasing day by day.</p>
+  <h3>CMS</h3>
+  <p>We are experts at designing and creating content management systems for the web. We analyse and research the market trends and collaborate these with your business requirements to mold a perfect CMS framework for your business.
+    Wordpress<br>
+Umbraco<br>
+Joomla<br>
+Drupal<br>
+DotnetNuke</p>
   
-  <h3>ANDROID</h3>
-  <p>Android is one of the fastest growing mobile operating systems with 60-80% user adoption rates across the globe. Android is backed by Google, and is constantly updating & innovating the mobile OS to increase user engagement and smoothen mobile operations. Android also runs across tablets, smart watches, TV, Automobiles & Augmented Reality. Google Play is Android’s App market which generated about six billion U.S. dollars in revenue last year, and is increasing day by day.</p>
-  
-  <h3>ANDROID</h3>
-  <p>Android is one of the fastest growing mobile operating systems with 60-80% user adoption rates across the globe. Android is backed by Google, and is constantly updating & innovating the mobile OS to increase user engagement and smoothen mobile operations. Android also runs across tablets, smart watches, TV, Automobiles & Augmented Reality. Google Play is Android’s App market which generated about six billion U.S. dollars in revenue last year, and is increasing day by day.</p>
-  
-  <h3>ANDROID</h3>
-  <p>Android is one of the fastest growing mobile operating systems with 60-80% user adoption rates across the globe. Android is backed by Google, and is constantly updating & innovating the mobile OS to increase user engagement and smoothen mobile operations. Android also runs across tablets, smart watches, TV, Automobiles & Augmented Reality. Google Play is Android’s App market which generated about six billion U.S. dollars in revenue last year, and is increasing day by day.</p>
-  
-  <h3>ANDROID</h3>
-  <p>Android is one of the fastest growing mobile operating systems with 60-80% user adoption rates across the globe. Android is backed by Google, and is constantly updating & innovating the mobile OS to increase user engagement and smoothen mobile operations. Android also runs across tablets, smart watches, TV, Automobiles & Augmented Reality. Google Play is Android’s App market which generated about six billion U.S. dollars in revenue last year, and is increasing day by day.</p>
-  
-  <h3>ANDROID</h3>
-  <p>Android is one of the fastest growing mobile operating systems with 60-80% user adoption rates across the globe. Android is backed by Google, and is constantly updating & innovating the mobile OS to increase user engagement and smoothen mobile operations. Android also runs across tablets, smart watches, TV, Automobiles & Augmented Reality. Google Play is Android’s App market which generated about six billion U.S. dollars in revenue last year, and is increasing day by day.</p>
-
-              </div>
+  <h3>E-COMMERCE</h3>
+  <p>Magento2<br>
+    WooComerce<br>
+    Virtuemart<br>
+    Big Commerce<br>
+    Shopify<br>
+    Opencart</p>
+  </div>
           </div>
       </div>
   </div>
