--- a/about.html
+++ b/about.html
@@ -7,14 +7,13 @@
 <!-- End of Data -->
 
 
-<!-- Mirrored from www.venmond.com/demo/vencorp/about.php by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 17 Sep 2019 10:37:26 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8" />
     <title>Winsome IT Solutions</title>
-    <meta name="keywords" content="HTML5 Template, CSS3, Metro Slider, Elegant HTML5 Theme" />
-    <meta name="description" content="Multipurpose Responsive HTML5 Themes with Animated Metro Slider - Vencorp">
-    <meta name="author" content="Venmond">
+    <meta name="keywords" content="HTML5, CSS3, JavaScript, NodeJS" />
+    <meta name="description" content="Winsome IT Solutions India Pvt. Ltd.">
+    <meta name="author" content="Winsome">
     
     <!-- Set the viewport width to device width for mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
@@ -118,7 +117,7 @@
                 <li> <a href="pages-sitemap.html"> Sitemap </a> </li>
               </ul>
             </div>
-            <li id="pages"> <a href="pages-services.html"> Services <i class="fa fa-caret-down"></i> </a>
+            <li id="pages"> <a href="#"> Services <i class="fa fa-caret-down"></i> </a>
               <div class="vc_menu-open-left vc_menu-2-v">
                 <ul class="clearfix">
                   <li> <a href="software-development.html"> Software Development </a> </li>
@@ -173,7 +172,7 @@
                       <h5> <span> <i class="fa fa-envelope"> </i> info@winsomeitsolutions.com </span> </h5>
                     </div>
                     <div class="pull-left">
-                      <h5> <span> <i class="fa fa-phone"> </i> +(91)704-457-6850 </span> </h5>
+                      <h5> <span> <i class="fa fa-phone"> </i> +(91)953-159-0577 </span> </h5>
                     </div>
                   </div>
                 </div>
@@ -427,7 +426,7 @@ Ignore or delete this code. Just for testing purpose.
         </tr>
         <tr>
           <td class="icon"><i class="fa fa-phone"> </i></td>
-          <td> +(91)704-457-6850 </td>
+          <td> +(91)953-159-0577 </td>
         </tr>
         <tr>
           <td class="icon"><i class="fa fa-envelope"> </i></td>
