--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,13 @@
 <!-- End of Data -->
 
 
-<!-- Mirrored from www.venmond.com/demo/vencorp/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 17 Sep 2019 10:37:36 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8" />
-    <title>Wisome IT Solutions</title>
-    <meta name="keywords" content="HTML5 Template, CSS3, Metro Slider, Elegant HTML5 Theme" />
-    <meta name="description" content="Multipurpose Responsive HTML5 Themes with Animated Metro Slider - Vencorp">
-    <meta name="author" content="Venmond">
+    <title>Winsome IT Solutions</title>
+    <meta name="keywords" content="HTML5, CSS3, JavaScript, NodeJS" />
+    <meta name="description" content="Winsome IT Solutions India Pvt. Ltd.">
+    <meta name="author" content="Winsome">
     
     <!-- Set the viewport width to device width for mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
@@ -118,7 +117,7 @@
                   <li> <a href="pages-sitemap.html"> Sitemap </a> </li>
                 </ul>
               </div>
-              <li id="pages"> <a href="pages-services.html"> Services <i class="fa fa-caret-down"></i> </a>
+              <li id="pages"> <a href="#"> Services <i class="fa fa-caret-down"></i> </a>
                 <div class="vc_menu-open-left vc_menu-2-v">
                   <ul class="clearfix">
                     <li> <a href="software-development.html"> Software Development </a> </li>
@@ -130,16 +129,6 @@
                   </ul>
                 </div>
             </li>
-            <!-- <li id="blog"> <a href="blog-list-mini.html"> Blogs <i class="fa fa-caret-down"> </i> </a>
-              <div class="vc_menu-open-left vc_menu-2-v">
-                <ul class="clearfix">
-                  <li> <a href="blog-list-mini.html"> Mini Image </a> </li>
-                  <li> <a href="blog-list-large.html"> Large Image </a> </li>
-                  <li> <a href="blog-full-width.html"> Full Width </a> </li>
-                  <li> <a href="blog-single.html"> Single Blog </a> </li>
-                </ul>
-              </div>
-            </li> -->
             <li> <a href="pages-career.html"> Career </a> </li>
             <li id="contact"> <a href="contact.html"> Contact Us </a> </li>
             
@@ -183,7 +172,7 @@
                       <h5> <span> <i class="fa fa-envelope"> </i> info@winsomeitsolutions.com </span> </h5>
                     </div>
                     <div class="pull-left">
-                      <h5> <span> <i class="fa fa-phone"> </i> +(91)704-457-6850 </span> </h5>
+                      <h5> <span> <i class="fa fa-phone"> </i> +(91)953-159-0577 </span> </h5>
                     </div>
                   </div>
                 </div>
@@ -282,7 +271,7 @@
                         <option>Web Design</option>
                         <option>Logo Design</option>
                         <option>Marketing</option>
-                        <option>Illustration</option>
+                        <option>App Design</option>
                         <option>Others</option>
                       </select>
                     </div>
@@ -324,6 +313,7 @@
                   <h4  class="vc_bg-blue"><i class="icon-map-marker"></i> Our Offices</h4>
                   <div class="content">
                     <ul class="vc_li">
+                      <h5 class="vc_main-color">India</h5>
                       <li>YC CoWorking Space, 3RD Floor,<br> 
                         Plot No.94, Dwarka Sector-13,<br> 
                         Opp. Metro Station, Near Radission Blue,<br>
@@ -333,8 +323,10 @@
                            DN-51, Sector V, Salt Lake,<br>
                           Kolkata-700091.<br>
                           Land Mark: RS Software Stop</li>
+                          <h5 class="vc_blue">Australia</h5>
                           <li>67 Howe Street, Osbourne Park, WA 6017.</li>
-
+                          <h5 class="vc_red">United States</h5>
+                          <li>30N Gould Street STE, 4806, Cheridan, WY: 82801</li>
                     </ul>
                   </div>
                 </div>
@@ -342,8 +334,7 @@
                   <h4 class="vc_bg-orange"><i class="icon-phone"></i> Call us</h4>
                   <div class="content">
                     <ul class="vc_li">
-                      <!-- <li>Toll Free: 1800-135-4656</li>
-                      <li>Fax: 1800-123-4567</li> -->
+                     <li>(+91) 953-159-0577 </li>
                     </ul>
                   </div>
                 </div>
@@ -409,7 +400,7 @@
           </tr>
           <tr>
             <td class="icon"><i class="fa fa-phone"> </i></td>
-            <td> +(91)704-457-6850 </td>
+            <td> +(91)953-159-0577 </td>
           </tr>
           <tr>
             <td class="icon"><i class="fa fa-envelope"> </i></td>
