--- a/software-development.html
+++ b/software-development.html
@@ -7,14 +7,14 @@
 <!-- End of Data -->
 
 
-<!-- Mirrored from www.venmond.com/demo/vencorp/pages-career.php by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 17 Sep 2019 10:37:30 GMT -->
+ 
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8" />
     <title>Winsome IT Solutions</title>
-    <meta name="keywords" content="HTML5 Template, CSS3, Metro Slider, Elegant HTML5 Theme" />
-    <meta name="description" content="Multipurpose Responsive HTML5 Themes with Animated Metro Slider - Vencorp">
-    <meta name="author" content="Venmond">
+    <meta name="keywords" content="HTML5, CSS3, JavaScript, NodeJS" />
+    <meta name="description" content="Winsome IT Solutions India Pvt. Ltd.">
+    <meta name="author" content="Winsome">
     
     <!-- Set the viewport width to device width for mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
@@ -172,7 +172,7 @@
                       <h5> <span> <i class="fa fa-envelope"> </i> info@winsomeitsolutions.com </span> </h5>
                     </div>
                     <div class="pull-left">
-                      <h5> <span> <i class="fa fa-phone"> </i> +(91)704-457-6850 </span> </h5>
+                      <h5> <span> <i class="fa fa-phone"> </i> +(91)953-159-0577 </span> </h5>
                     </div>
                   </div>
                 </div>
@@ -272,7 +272,7 @@
           </tr>
           <tr>
             <td class="icon"><i class="fa fa-phone"> </i></td>
-            <td> +(91)704-457-6850 </td>
+            <td> +(91)953-159-0577 </td>
           </tr>
           <tr>
             <td class="icon"><i class="fa fa-envelope"> </i></td>
@@ -426,5 +426,5 @@
 
 </body>
 
-<!-- Mirrored from www.venmond.com/demo/vencorp/pages-career.php by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 17 Sep 2019 10:37:30 GMT -->
+ 
 </html>
