--- a/ofc-net.html
+++ b/ofc-net.html
@@ -247,7 +247,7 @@
               </div>
           </div>
               <div class="col-lg-6">
-                <img src="img/pageimg/softdev.jpg" /> 
+                <img src="img/pageimg/ofc.jpg" /> 
           </div>
       </div>
   </div>
