--- a/traffic-data.html
+++ b/traffic-data.html
@@ -254,7 +254,7 @@
               </div>
           </div>
               <div class="col-lg-6">
-                <img src="img/pageimg/softdev.jpg" /> 
+                  <br /> <br /> <br /> <img src="img/pageimg/traffic.png" /> 
           </div>
       </div>
   </div>
