contact nmbr changed

--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@
                       <h5> <span> <i class="fa fa-envelope"> </i> info@winsomeitsolutions.com </span> </h5>
                     </div>
                     <div class="pull-left">
-                      <h5> <span> <i class="fa fa-phone"> </i> +(91)953-159-0577 </span> </h5>
+                      <h5> <span> <i class="fa fa-phone"> </i> 033 - 4007 8558 </span> </h5>
                     </div>
                   </div>
                 </div>
@@ -434,7 +434,7 @@ Ignore or delete this code. Just for testing purpose.
         </tr>
         <tr>
           <td class="icon"><i class="fa fa-phone"> </i></td>
-          <td> +(91)953-159-0577 </td>
+          <td> 033 - 4007 8558 </td>
         </tr>
         <tr>
           <td class="icon"><i class="fa fa-envelope"> </i></td>
