--- a/contact.html
+++ b/contact.html
@@ -180,7 +180,7 @@
                       <h5> <span> <i class="fa fa-envelope"> </i> info@winsomeitsolutions.com </span> </h5>
                     </div>
                     <div class="pull-left">
-                      <h5> <span> <i class="fa fa-phone"> </i> +(91)953-159-0577 </span> </h5>
+                      <h5> <span> <i class="fa fa-phone"> </i> 033 - 4007 8558 </span> </h5>
                     </div>
                   </div>
                 </div>
@@ -342,7 +342,7 @@
                   <h4 class="vc_bg-orange"><i class="icon-phone"></i> Call us</h4>
                   <div class="content">
                     <ul class="vc_li">
-                     <li>(+91) 953-159-0577 </li>
+                     <li>033 - 4007 8558 </li>
                     </ul>
                   </div>
                 </div>
@@ -408,7 +408,7 @@
           </tr>
           <tr>
             <td class="icon"><i class="fa fa-phone"> </i></td>
-            <td> +(91)953-159-0577 </td>
+            <td> 033 - 4007 8558 </td>
           </tr>
           <tr>
             <td class="icon"><i class="fa fa-envelope"> </i></td>
